# matrix-bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: docker-image.yml
matrix_bot/: Cargo.toml
matrix_bot/src/: main.rs
matrix_bot_core/: Cargo.toml
matrix_bot_core/src/: lib.rs
matrix_bot_core/src/matrix/: client.rs  e2ee.rs  mod.rs  room.rs
plugins/qbittorrent/: Cargo.toml
plugins/qbittorrent/src/: lib.rs  matrix.rs  setting.rs
plugins/qbittorrent/src/qbit/: binary.rs  mod.rs  ops.rs
plugins/qbittorrent/src/upload/: gofile.rs  mod.rs
plugins/webhook/: Cargo.toml
plugins/webhook/src/: lib.rs  setting.rs
plugins/yande_popular/: Cargo.toml
plugins/yande_popular/src/: db.rs  lib.rs  resize.rs  setting.rs  yande.rs
