[package]
name = "matrix_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_bot_core = { path = "../matrix_bot_core" }
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
env_logger = "0.10.0"
log = "0.4.20"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }

# Optional dependencies
yande_popular = { path = "../plugins/yande_popular", optional = true }
webhook = { path = "../plugins/webhook", optional = true }

[features]
default = ["full"]
full = ["yande_popular", "webhook"]
