[package]
name = "matrix_bot_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"

log = "0.4.20"
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
url = "2.2.2"
uuid = { version = "1.4.1", features = ["v4"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "signal"] }
axum = { version = "0.6.20" }


mime_guess = "2.0.4"
image = "0.24.7"
blurhash = "0.2.0"
