[package]
name = "yande_popular"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
matrix_bot_core = { path = "../../matrix_bot_core" }
image_compressor = { git = "https://github.com/Chikage0o0/image_compressor/", branch = "main" }
reqwest = "0.11.22"
log = "0.4.14"
select = "0.6.0"
sled = { version = "0.34.7" }
toml = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", default-features = false, features = [] }

[dev-dependencies]
env_logger = "0.10.0"
